Aggregate results + Add zephIR@1 (or 2 or 3, to be fixed)

--- a/configs/tracking/track.yml
+++ b/configs/tracking/track.yml
@@ -22,3 +22,4 @@ tracking_methods:
   - emht
   - koft
   - zephir
+  - zephir-low   # ZephIR with less annotated images (Note that trackmate, emht and koft don't use any annotations)
