3D version is working

--- a/configs/dataset/default.yml
+++ b/configs/dataset/default.yml
@@ -5,7 +5,7 @@ __default__:
 
 __run__:
   __main__: neuro_track.main:main
-  __name__: "{name}/{simulator.imaging_config.psnr}-{simulator.imaging_config.delta}/{seed}"
+  __name__: "{name}/{simulator.imaging_config.alpha}-{simulator.imaging_config.delta}/{seed}"
   __output_dir__: experiment_folder/dataset
 
 name: DEFAULT
