--- a/configs/dataset/springs_2d.yml
+++ b/configs/dataset/springs_2d.yml
@@ -1,7 +1,7 @@
 __default__:
   - ./default.yml
 
-name: springs
+name: springs_2d
 
 
 simulator:  # Replace motion with springs motion + global drift
