--- a/configs/dataset/simulator/default.yml
+++ b/configs/dataset/simulator/default.yml
@@ -11,7 +11,10 @@ simulator:
   imaging_config:
     delta: 50.0
     noise: 0.1
-    psnr: 1.5  # SNR in db (10 log_10)
+    alpha: 0.2
+    # psnr: 1.5  # SNR in db (10 log_10)
+
+  shape: [1024, 1024]  # 2D videos by default 1M pixels
 
   base_video:
     path: ""
