Add documentation in README + Deploy data, everything is ready to use

--- a/configs/dataset/hydra_flow.yml
+++ b/configs/dataset/hydra_flow.yml
@@ -5,12 +5,16 @@ name: hydra_flow
 
 simulator:
   base_video:
-    path: $DATA_FOLDER/pasteur/hydra/movies/dupre/20140829 1.tif
+    path: $EXPYRUN_CWD/dupre_20140829_1_contracting.tiff
     transform:
       aggregate: True
       normalize: True
       q_min: 0.02
       q_max: 0.997
       smooth_clip: 1.0
-    start: 800  # There is a contraction around frame 900
-    stop: 1000
+
+  # Now, the video is already the 200 frames centered on the contraction
+  # No need to further select a sequence inside this video
+  # This can be done for other video though
+  # start: 800  # Contraction at frame 900
+  # stop: 1000
