--- a/configs/dataset/default.yml
+++ b/configs/dataset/default.yml
@@ -13,3 +13,4 @@ seed: 111
 n_frames: 200
 display: False
 dataset_path: $EXPYRUN_CWD/dataset  # Save to the local dataset folder
+format: full  # Save annotations as .tiff, one for each frame (otherwise it is saved in a .pt file)
