Add requirements_dev for sinetra package

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ python_requires = >=3.8
 install_requires =
     byotrack
     dacite
+    pyyaml
 include_package_data = False
 
 [options.package_data]
