--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,9 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install torch --index-url https://download.pytorch.org/whl/cpu  # Install torch cpu instead of torch for linting(faster)
-          pip install -e .
-          pip install -r requirements.txt
+          pip install -r requirements_dev.txt
       - name: pylint
         run: |
           pylint sinetra
